[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy', 'cython']

[project]
name = "geowombat"
version = "2.1.22"
description = "Utilities for geospatial data"
readme = 'README.md'
license = {file = "LICENSE.txt"}
authors = [{name='Jordan Graesser'}]
maintainers = [
  {name = 'Jordan Graesser'}
]
dependencies = [
  "dask[array,dataframe]",
  "distributed",
  "geopandas",
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "pyproj",
  "rasterio",
  "retry",
  "requests",
  "scikit-learn",
  "scipy",
  "shapely",
  "tqdm",
  "xarray",
  "h5netcdf",
  "cryptography",
  "threadpoolctl"
]


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | \.idea
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
