[semantic_release]
version_variable = src/geowombat/__init__.py:__version__
branch = main
upload_to_release = true
version_source = tag  # Other option is commit
GH_TOKEN = GITHUB_TOKEN
CIRCLECI = false

[metadata]
description_file = README.md
url = https://github.com/jgrss/geowombat
license = LICENSE.txt
version = attr: geowombat.__version__
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific :: Remote Sensing
    Programming Language :: Cython
    Programming Language :: Python :: 3.7 :: 3.8

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    cython>=0.29.*
python_requires = >=3.8
install_requires =
    dask[array,dataframe]>=2022.1.1
    distributed>=2022.1.1
    geopandas>=0.8.0
    joblib>=0.16.0
    matplotlib>=3.3.0
    numpy>=1.19.0
    opencv-python
    pandas>=1.*
    pyproj>=3.0.0,<4.0.0
    rasterio>=1.3.0,<2.0.0
    retry
    requests>=2.20.0
    scikit-learn>=0.23.0
    scipy>=1.5.0
    shapely>=1.7.0
    tqdm>=4.62.0
    xarray>=2022.6.0
    cryptography
    threadpoolctl
    setuptools>=59.5.0;python_version>='3.8.12'

[options.extras_require]
docs = numpydoc
    sphinx
    sphinx-automodapi
    sphinxcontrib-bibtex<2.0.0
    sphinx_tabs
    ipython
    graphviz
    jax
    jaxlib
tests = testfixtures
    jax
    jaxlib
    h5netcdf
    arosics
    earthpy
    pyfftw
    bottleneck
coreg = arosics
    earthpy
    pyfftw
    bottleneck
zarr = zarr
    numcodecs
ml = dask-ml
    lightgbm
    sklearn-xarray@git+https://github.com/jgrss/sklearn-xarray.git
perf = rtree
    pygeos
    opencv-python
    h5netcdf
    netCDF4
    ray
time = dateparser
view = ipython
    bokeh
    descartes
    graphviz
web = gsutil
    requests
    pystac-client
    stackstac[viz]
    sat-search
    planetary-computer
    Rich
    wget

[options.packages.find]
where=src
exclude=
    data
    dockerfiles
    notebooks
    tests

[options.package_data]
* = *.md, *.txt
geowombat = config.ini
    data/*.txt
    data/*.tif
    data/*.TIF
    data/*.gpkg
    data/*.tar.gz
    data/*.nc
    moving/*.so
    bin/*.tar.gz
