[semantic_release]
version_variable = src/geowombat/__init__.py:__version__
branch = main
upload_to_release = true
version_source = tag  # Other option is commit
GH_TOKEN = GITHUB_TOKEN
CIRCLECI = false

[metadata]
description_file = README.md
url = https://github.com/jgrss/geowombat
license = LICENSE.txt
version = attr: geowombat.__version__
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific :: Remote Sensing
    Programming Language :: Cython
    Programming Language :: Python :: 3.8 :: 3.9 :: 3.10

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    cython>=0.29.0,<3.0.0
python_requires = >=3.8,<3.11
install_requires =
    dask[array,dataframe]>=2023.1.0
    distributed>=2023.1.0
    geopandas>=0.8.0
    joblib>=0.16.0
    matplotlib>=3.3.0
    numpy>=1.24.4
    pandas>=1.0.0
    pyproj>=3.0.0,<=3.4.0 # pyproj==3.5.0 raise error with WKT1_GDAL format, but we do not need Geoarray projection
    rasterio>=1.3.0,<2.0.0
    retry
    requests>=2.20.0
    scikit-learn>=0.23.0
    scipy>=1.5.0
    shapely>=1.7.0
    tqdm>=4.62.0
    xarray>=2023.1.0
    h5netcdf>=1.0.2
    cryptography>=38.0.0
    threadpoolctl>=3.1.0
    setuptools>=59.5.0
    cython>=0.29.0,<3.0.0

[options.extras_require]
docs = numpydoc
    sphinx
    sphinx-automodapi
    sphinxcontrib-bibtex<2.0.0
    sphinx_tabs
    pydata-sphinx-theme==0.13.1 # from https://github.com/google/jax/blob/main/docs/requirements.txt
    sphinx-book-theme>=1.0.0
    sphinx-copybutton>=0.5.0
    sphinx-autodoc-typehints
    ipython
    graphviz
tests = testfixtures
    jax
    jaxlib
    pre-commit
    black
    flake8
    docformatter
    isort
coreg = earthpy
    pyfftw==0.13.1
    bottleneck
    cartopy
    cmocean
    dill
    geoarray>=0.15.0
    geojson
    folium>=0.6.0,!=0.12.0
    pykrige
    py_tools_ds>=0.18.0
zarr = zarr
    numcodecs
ml = dask-ml>=2022.5.27
    lightgbm
    sklearn-xarray@git+https://github.com/jgrss/sklearn-xarray.git
perf = rtree
    pygeos
    netCDF4
    ray>=2.3.0
time = dateparser
view = ipython
    bokeh
    descartes
    graphviz
stac = stackstac[viz]@git+https://github.com/jgrss/stackstac.git
    pystac-client
    sat-search
    planetary-computer
    Rich
    wget
web = gsutil
    requests
    wget

[options.packages.find]
where=src
exclude=
    data
    dockerfiles
    notebooks
    tests

[options.package_data]
* = *.md, *.txt
geowombat = config.ini
    data/*.txt
    data/*.tif
    data/*.TIF
    data/*.gpkg
    data/*.tar.gz
    data/*.nc
    # Support sdist
    moving/*.pyx
    moving/*.pxd
    moving/*.so
    bin/*.tar.gz
